[package]
name = "target-tool"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.2", features = ["derive"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
xml-rs = "0.8"
prettytable-rs = "0.10"
colored = "2.0"
indicatif = "0.17"
sysinfo = "0.29"
num_cpus = "1.15"
sys-info = "0.9"
rand = "0.8"
dirs = "5.0"

[dev-dependencies]
mockall = "0.11"
http = "0.2"
